# EmpowerUPythonFundamentals

./: .gitignore  Zen.txt  cd  codewars_task2.py
hw/: .gitignore  __init__.py
hw/hw07/: Multiples of 3 or 5.py  codeWars.py  task1.py  task2.py  task3.py  task7_1.py  task_1.py
hw/hw08/: task2.py  task_08_2.py
hw/hw09/: Rect_pygame.py
lessons/: __init__.py
lessons/lesson09/: app.py  colors.py  tank_app.py
lessons/lesson10/: Encapsulation.py  Inheritance.py  lesson10.2.py  lesson10.py  multiple_inheritance.py  ее.py
lessons/lesson11/: app.py  lesson11.py  log.py  student.py
lessons/lesson12/: TelephoneBookApp.py  app.py  model.py
lessons/lesson13/: dec.js  dec.py  lesson13.py
lessons/lesson14/: lesson14.py  models.py  my_json.py  out.txt  tests.py  (+2 more)
mini_projects/: __init__.py
mini_projects/ElveeBolt/NeuroPost/app/: .env.example  Dockerfile  Dockerfile_celery  README.md  entrypoint.sh  manage.py  prompts.yaml  pyproject.toml
mini_projects/ElveeBolt/NeuroPost/app/apps/project/: admin.py  apps.py  models.py  signals.py  tasks.py
mini_projects/ElveeBolt/NeuroPost/app/apps/project/services/Agent/: Agent.py  PromptBuilder.py  types.py
mini_projects/ElveeBolt/NeuroPost/app/neuropost/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mini_projects/ElveeBolt/NeuroPost/bot/: .env.example  Dockerfile  README.md  pyproject.toml
mini_projects/ElveeBolt/NeuroPost/bot/src/: bot.py  config.py  database.py  models.py
mini_projects/ElveeBolt/NeuroPost/bot/src/services/: project.py
mini_projects/ElveeBolt/NeuroPost/bot/src/tasks/: publish_posts.py
(+1580 files in other folders)
