[project]
name = "neuropost"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "celery>=5.5.3",
    "django>=5.2.5",
    "django-environ>=0.12.0",
    "gunicorn>=23.0.0",
    "openai>=1.99.3",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
]
